--- a/src/content/docs/reference/Shaders.Properties/rendering.mdx
+++ b/src/content/docs/reference/Shaders.Properties/rendering.mdx
@@ -3,10 +3,11 @@ title: "Rendering"
 description: "Rendering"
 sidebar:
   label: "Rendering"
-  order: 5
+  order: 6
 ---
 import { Badge } from '@astrojs/starlight/components';
 
+This page lists [shaders.properties](/reference/shadersproperties/overview) rendering options including alpha tests and blending, buffer sizes and flipping, depth writing, culling, and more.
 
 ## alphaTest
 ```properties
