--- a/src/content/docs/reference/Shaders.Properties/flags.mdx
+++ b/src/content/docs/reference/Shaders.Properties/flags.mdx
@@ -9,9 +9,7 @@ sidebar:
     variant: tip
 ---
 
-#### Location: shaders.properties
-
-Feature flags are an Iris system to query the activation state of certain features. To activate them there are two directives that can be placed in `shaders.properties`: `iris.features.required` and `iris.features.optional`. `iris.features.required` will throw an error if your device or version of Iris does not support the feature. `iris.features.optional` will create a define that can be used to test the availability of such a feature. Additionally the `IS_IRIS` define can be used to test if your shader is in Iris or optifine, and always exists.
+Feature flags are an Iris system to query the activation state of certain features. To activate them there are two directives that can be placed in `shaders.properties`: `iris.features.required` and `iris.features.optional`. `iris.features.required` will throw an error if your device or version of Iris does not support the feature. `iris.features.optional` will create a define that can be used to test the availability of such a feature.
 
 <br>
 To use the flags add the following to your `shaders.properties`:
@@ -31,24 +29,17 @@ Then you could check for this with
 #ifdef IRIS_FEATURE_BLOCK_EMISSION_ATTRIBUTE
 ```
 
-The following are currently valid feature flags:
+The following is an index of all supported feature flags. Any feature flag marked as "required for use" must be set in `iris.features.required` or `iris.features.optional` in order to use the feature, otherwise Iris will throw an error.
 
-`SEPARATE_HARDWARE_SAMPLERS` (required for [Separate Hardware Shadow Samplers](/reference/buffers/shadowtex))
-
-`HIGHER_SHADOWCOLOR` (required for [Extended Shadowcolor](/reference/buffers/shadowcolor))
-
-`PER_BUFFER_BLENDING`
-
-`COMPUTE_SHADERS`
-
-`TESSELATION_SHADERS`
-
-`ENTITY_TRANSLUCENT` (recommended, but not required for Entity Translucent)
-
-`SSBO` (required for Shader Storage Buffer Objects)
-
-`CUSTOM_IMAGES` (required for Custom Images)
-
-`REVERSED_CULLING` (recommended, but not required for [Reverse Shadow Culling](/reference/constants/voxeldistance))
-
-`BLOCK_EMISSION_ATTRIBUTE` (recommended, but not required for [Block Emission: at_midBlock.w] as of [iris-1.7.0-snapshotmc1.20.4-a787322])
+| Feature Flag                                   | Required For Use | Description |
+| ---------------------------------------------- | ---------------- | ----------- |
+| `SEPARATE_HARDWARE_SAMPLERS`                   | ✔️               | Enables [Separate Hardware Shadow Samplers](/reference/buffers/shadowtex#hardware-sampling) |
+| `HIGHER_SHADOWCOLOR`                           | ✔️               | Enables [additional shadowcolor](/reference/buffers/shadowcolor#extended-shadowcolor) buffers |
+| `PER_BUFFER_BLENDING`                          | ❌               | Queries hardware support for per-buffer blending |
+| `COMPUTE_SHADERS`                              | ❌               | Queries support for compute shaders |
+| `TESSELATION_SHADERS` / `TESSELLATION_SHADERS` | ✔️               | Enables tesselation shaders |
+| `ENTITY_TRANSLUCENT`                           | ❌               | Queries support for [`gbuffers_entities_translucent`](/reference/programs/gbuffers#iris-additional-programs) |
+| `SSBO`                                         | ✔️               | Enables [SSBOs](/reference/buffers/ssbo) |
+| `CUSTOM_IMAGES`                                | ✔️               | Enables [custom images](/reference/buffers/custom_images) |
+| `REVERSED_CULLING`                             | ❌               | Queries support for [Reverse Shadow Culling](/reference/constants/voxeldistance) |
+| `BLOCK_EMISSION_ATTRIBUTE`                     | ❌               | Queries support for the [block emission attribute](/reference/attributes/at_midblock) (`at_midBlock.w`) |
