--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ lastUpdated: false
 prev: false
 next: false
 hero:
-  title: Welcome to the Iris Docs
+  title: Welcome to the Iris Documentation
   tagline: Get started building shaders!
   image:
     file: ../../assets/iris.webp
@@ -27,26 +27,11 @@ import BannerImage from '../../components/BannerImage.astro'
 
 <BannerImage />
 
-## Get Started
-
 <CardGrid stagger>
-	<Card title="Chat On Discord" icon="discord">
+	<Card title="Chat With Us" icon="discord">
 		Join the [Iris Discord](https://discord.com/invite/jQJnav2jPu).
 	</Card>
 	<Card title="Add new content" icon="add-document">
-		Help us improve this site on our [github](https://github.com/IrisShaders/DocsPage/). 
-	</Card>
-	<Card title="Chat with us" icon="email">
-		Chat with us at <span style="color:#7ce0e0">`@Documentation Developer`</span> on the discord .
+		Help us improve this site on [GitHub](https://github.com/IrisShaders/DocsPage/). 
 	</Card>
 </CardGrid>
-
-## Contributors
-
-A big thanks to the many people below who make this site work. This would not be the same without you.
-
-- WhyFencePost: Project lead, page design, data transfer
-- NinjaMike: Much of the documentation, including many uniforms, attributes, constants, macros, shaders.properties docs, and more 
-- JoshTheB: Beginner tutorial, howtos, some uniforms, general site improvements
-- IMS: Setting up the page, general support of the site and also the domain
-- Kixys: Main banner image
